src/test/ui/type-alias-impl-trait/issue-57611-trait-alias.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-57611-trait-alias.rs:21:9
   |
LL |         |x| x
   |         ^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 X) -> &X` must implement `FnOnce<(&'1 X,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 X,)>`, for some specific lifetime `'2`

error: could not find defining uses
  --> $DIR/issue-57611-trait-alias.rs:17:16
   |
LL |     type Bar = impl Baz<Self, Self>;
   |                ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

